test_regress/t/t_var_bad_sameas.out
%Error: t/t_var_bad_sameas.v:10:7: Unsupported in C: Instance has the same name as variable: 'varfirst'
   10 |   sub varfirst ();   
      |       ^~~~~~~~
        t/t_var_bad_sameas.v:9:11: ... Location of original declaration
    9 |   integer varfirst;
      |           ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_var_bad_sameas.v:11:8: Unsupported in C: Task has the same name as instance: 'varfirst'
   11 |   task varfirst;
      |        ^~~~~~~~
        t/t_var_bad_sameas.v:10:7: ... Location of original declaration
   10 |   sub varfirst ();   
      |       ^~~~~~~~
%Error: t/t_var_bad_sameas.v:17:11: Unsupported in C: Variable has same name as instance: 'cellfirst'
   17 |   integer cellfirst;   
      |           ^~~~~~~~~
%Error: t/t_var_bad_sameas.v:18:8: Unsupported in C: Task has the same name as instance: 'cellfirst'
   18 |   task cellfirst;
      |        ^~~~~~~~~
        t/t_var_bad_sameas.v:16:7: ... Location of original declaration
   16 |   sub cellfirst ();
      |       ^~~~~~~~~
%Error: t/t_var_bad_sameas.v:27:11: Unsupported in C: Variable has same name as task: 'taskfirst'
   27 |   integer taskfirst;   
      |           ^~~~~~~~~
%Error: t/t_var_bad_sameas.v:28:7: Unsupported in C: Instance has the same name as task: 'taskfirst'
   28 |   sub taskfirst ();   
      |       ^~~~~~~~~
        t/t_var_bad_sameas.v:23:8: ... Location of original declaration
   23 |   task taskfirst;
      |        ^~~~~~~~~
%Error: Exiting due to
